--- a/package.json
+++ b/package.json
@@ -10,14 +10,86 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "^14.0.0",
+    "@angular/cdk": "^14.1.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
+    "@angular/fire": "^7.4.1",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.0.0",
+    "@angular/localize": "^14.1.0",
+    "@angular/material": "^14.1.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@asymmetrik/ngx-leaflet": "^14.0.1",
+    "@kolkov/angular-editor": "^2.1.0",
+    "@ks89/angular-modal-gallery": "^9.1.0",
+    "@material/dialog": "^14.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ng-select/ng-select": "^9.0.2",
+    "@ngrx/store": "^14.0.2",
+    "@sweetalert2/ngx-sweetalert2": "^11.0.0",
+    "@swimlane/ngx-datatable": "^20.0.0",
+    "@types/hammerjs": "^2.0.41",
+    "angular-archwizard": "^7.0.0",
+    "angular-calendar": "^0.29.0",
+    "angular-cd-timer": "^1.3.0",
+    "angular-dual-listbox": "^7.0.0",
+    "angular-notifier": "^11.0.0",
+    "angular-simple-scroll-spy": "^0.0.3",
+    "angular2-multiselect-dropdown": "^5.0.4",
+    "animate.css": "^4.1.1",
+    "autoprefixer": "^10.4.8",
+    "bootstrap": "^5.2.0",
+    "browser-sync": "^2.27.10",
+    "chart.js": "^3.9.0",
+    "chartist": "^0.11.4",
+    "chartjs-plugin-datalabels": "^2.1.0",
+    "counterup2": "^2.0.2",
+    "countries-map": "^4.2.4",
+    "date-fns": "^2.29.1",
+    "echarts": "^5.3.3",
+    "firebase": "^9.9.4",
+    "g": "^2.0.1",
+    "gulp": "^3.9.1",
+    "gulp-beautify": "^3.0.0",
+    "gulp-cssbeautify": "^3.0.1",
+    "gulp-postcss": "^9.0.1",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "hammerjs": "^2.0.8",
+    "install": "^0.13.0",
+    "intl-tel-input": "^17.0.18",
+    "leaflet": "^1.8.0",
+    "moment": "^2.29.4",
+    "mousetrap": "^1.6.5",
+    "ng-apexcharts": "^1.7.1",
+    "ng-chartist": "^6.8.1",
+    "ng-circle-progress": "^1.6.0",
+    "ng-gallery": "^7.0.0",
+    "ng-select2-component": "^10.0.0",
+    "ng2-charts": "^4.0.0",
+    "ng2-tel-input": "^2.3.0",
+    "ngx-bar-rating": "^4.0.1",
+    "ngx-color-picker": "^12.0.1",
+    "ngx-cookie-service": "^14.0.1",
+    "ngx-daterangepicker-material": "^5.0.2",
+    "ngx-dropzone": "^3.1.0",
+    "ngx-dropzone-wrapper": "^11.0.0",
+    "ngx-echarts": "^14.0.0",
+    "ngx-editor": "^14.2.0",
+    "ngx-material-timepicker": "^5.5.3",
+    "ngx-owl-carousel-o": "^14.0.1",
+    "ngx-perfect-scrollbar": "^10.1.1",
+    "ngx-quill": "^18.0.0",
+    "ngx-toastr": "^15.0.0",
+    "npm": "^8.15.1",
+    "perfect-scrollbar": "^1.5.5",
+    "sass": "^1.54.1",
+    "sweetalert2": "^11.4.24",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -27,6 +99,8 @@
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "@types/chartist": "^0.11.1",
+    "@types/node": "^18.6.3",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
