--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@ng-select/ng-select": "^9.0.2",
     "@ngrx/store": "^14.0.2",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "@swimlane/ngx-datatable": "^20.0.0",
     "@types/hammerjs": "^2.0.41",
@@ -50,6 +51,7 @@
     "chartjs-plugin-datalabels": "^2.1.0",
     "counterup2": "^2.0.2",
     "countries-map": "^4.2.4",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.29.1",
     "echarts": "^5.3.3",
     "firebase": "^9.9.4",
@@ -88,9 +90,10 @@
     "ngx-toastr": "^15.0.0",
     "npm": "^8.15.1",
     "perfect-scrollbar": "^1.5.5",
+    "rxjs": "~6.5.5",
+    "rxjs-compat": "^6.6.7",
     "sass": "^1.54.1",
     "sweetalert2": "^11.4.24",
-    "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -98,8 +101,8 @@
     "@angular-devkit/build-angular": "^14.0.5",
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
-    "@types/jasmine": "~4.0.0",
     "@types/chartist": "^0.11.1",
+    "@types/jasmine": "~4.0.0",
     "@types/node": "^18.6.3",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
