--- a/package.json
+++ b/package.json
@@ -95,9 +95,16 @@
     "sass": "^1.54.1",
     "sweetalert2": "^11.4.24",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "angular-datatables": "^13.1.0",
+    "datatables.net": "^1.12.1",
+    "datatables.net-buttons": "^2.2.3",
+    "datatables.net-buttons-dt": "^2.2.3",
+    "datatables.net-dt": "^1.12.1"
   },
   "devDependencies": {
+    "@types/datatables.net": "^1.10.23",
+    "@types/datatables.net-buttons": "^1.4.7",
     "@angular-devkit/build-angular": "^14.0.5",
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
