--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "noImplicitAny": false,
     "target": "es2020",
     "module": "es2020",
+    "strictPropertyInitialization": false,
     "lib": [
       "es2020",
       "dom"
