--- a/angular.json
+++ b/angular.json
@@ -77,6 +77,8 @@
               "./node_modules/intl-tel-input/build/css/intlTelInput.css",
               "src/styles.scss",
               "node_modules/datatables.net-buttons-dt/css/buttons.dataTables.css",
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
+              "node_modules/ngx-spinner/animations/timer.css",
               "node_modules/datatables.net-dt/css/jquery.dataTables.css"
             ],
             "scripts": [
