--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "angular-archwizard": "^7.0.0",
     "angular-calendar": "^0.29.0",
     "angular-cd-timer": "^1.3.0",
+    "angular-datatables": "^13.1.0",
     "angular-dual-listbox": "^7.0.0",
     "angular-notifier": "^11.0.0",
     "angular-simple-scroll-spy": "^0.0.3",
@@ -52,6 +53,10 @@
     "counterup2": "^2.0.2",
     "countries-map": "^4.2.4",
     "crypto-js": "^4.1.1",
+    "datatables.net": "^1.12.1",
+    "datatables.net-buttons": "^2.2.3",
+    "datatables.net-buttons-dt": "^2.2.3",
+    "datatables.net-dt": "^1.12.1",
     "date-fns": "^2.29.1",
     "echarts": "^5.3.3",
     "firebase": "^9.9.4",
@@ -70,7 +75,7 @@
     "mousetrap": "^1.6.5",
     "ng-apexcharts": "^1.7.1",
     "ng-chartist": "^6.8.1",
-    "ng-circle-progress": "^1.6.0",
+    "ng-circle-progress": "^1.7.1",
     "ng-gallery": "^7.0.0",
     "ng-select2-component": "^10.0.0",
     "ng2-charts": "^4.0.0",
@@ -96,20 +101,15 @@
     "sass": "^1.54.1",
     "sweetalert2": "^11.4.24",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "angular-datatables": "^13.1.0",
-    "datatables.net": "^1.12.1",
-    "datatables.net-buttons": "^2.2.3",
-    "datatables.net-buttons-dt": "^2.2.3",
-    "datatables.net-dt": "^1.12.1"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@types/datatables.net": "^1.10.23",
-    "@types/datatables.net-buttons": "^1.4.7",
     "@angular-devkit/build-angular": "^14.0.5",
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
     "@types/chartist": "^0.11.1",
+    "@types/datatables.net": "^1.10.23",
+    "@types/datatables.net-buttons": "^1.4.7",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^18.6.3",
     "jasmine-core": "~4.1.0",
