--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "countries-map": "^4.2.4",
     "crypto-js": "^4.1.1",
     "d3": "^7.8.5",
+    "d3-org-chart": "^3.1.1",
     "datatables.net": "^1.12.1",
     "datatables.net-buttons": "^2.2.3",
     "datatables.net-buttons-dt": "^2.2.3",
@@ -109,6 +110,7 @@
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
     "@types/chartist": "^0.11.1",
+    "@types/d3-org-chart": "^3.1.1",
     "@types/datatables.net": "^1.10.23",
     "@types/datatables.net-buttons": "^1.4.7",
     "@types/jasmine": "~4.0.0",
