--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.8",
     "bootstrap": "^5.2.0",
-    "browser-sync": "^2.27.10",
+    "browser-sync": "^2.23.7",
     "chart.js": "^3.9.0",
     "chartist": "^0.11.4",
     "chartjs-plugin-datalabels": "^2.1.0",
@@ -58,17 +58,17 @@
     "datatables.net": "^1.12.1",
     "datatables.net-buttons": "^2.2.3",
     "datatables.net-buttons-dt": "^2.2.3",
-    "datatables.net-dt": "^1.12.1",
+    "datatables.net-dt": "^1.13.8",
     "date-fns": "^2.29.1",
     "echarts": "^5.3.3",
     "firebase": "^9.9.4",
     "g": "^2.0.1",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-beautify": "^3.0.0",
     "gulp-cssbeautify": "^3.0.1",
     "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0",
+    "gulp-sourcemaps": "^2.6.5",
     "hammerjs": "^2.0.8",
     "install": "^0.13.0",
     "intl-tel-input": "^17.0.18",
@@ -90,13 +90,13 @@
     "ngx-dropzone-wrapper": "^11.0.0",
     "ngx-echarts": "^14.0.0",
     "ngx-editor": "^14.2.0",
-    "ngx-material-timepicker": "^5.5.3",
+    "ngx-material-timepicker": "^13.1.1",
     "ngx-owl-carousel-o": "^14.0.1",
     "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-quill": "^18.0.0",
     "ngx-spinner": "^14.0.0",
     "ngx-toastr": "^15.0.0",
-    "npm": "^8.15.1",
+    "npm": "^10.2.4",
     "perfect-scrollbar": "^1.5.5",
     "rxjs": "~6.5.5",
     "rxjs-compat": "^6.6.7",
@@ -107,9 +107,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.5",
-    "@angular/cli": "~14.0.5",
+    "@angular/cli": "^14.2.13",
     "@angular/compiler-cli": "^14.0.0",
     "@types/chartist": "^0.11.1",
+    "@types/crypto-js": "^4.2.1",
     "@types/d3-org-chart": "^3.1.1",
     "@types/datatables.net": "^1.10.23",
     "@types/datatables.net-buttons": "^1.4.7",
