--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "hammerjs": "^2.0.8",
     "install": "^0.13.0",
     "intl-tel-input": "^17.0.18",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.8.0",
     "moment": "^2.29.4",
     "mousetrap": "^1.6.5",
